[tool.poetry]
name = "dsa-python"
version = "0.1.0"
description = ""
authors = ["abhay <abhay2001sri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pytest = "^8.3.4"
pycowsay = "^0.0.0.2"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
